# MyCodingTeam

./: .gitignore  MVP_STATUS.md  POC_RESULTS.md  agent-implementation.md  construction-plan.md  myCodingTeam.md  pyproject.toml
my_coding_team/: __init__.py  cli.py  config.py
my_coding_team/agents/: __init__.py  context_scout.py  delivery.py  intake_router.py  planning.py  qa_verification.py  review_room.py  shape.py  specification.py  task_implementation.py  tdd.py
my_coding_team/core/: __init__.py  registry.py  room.py  step.py
my_coding_team/orchestration/: __init__.py  branch_finisher.py  cost_budget.py  permission_builder.py  pm_orchestrator.py  review_input_materializer.py  signoff.py  state_machine.py  task_runner.py  workspace_manager.py
my_coding_team/prompts/: context_scout.md  delivery.md  intake_router.md  planning.md  qa_verification.md  review_room.md  (+6 more)
tests/: conftest.py  test_agentscope_adapter.py  test_architecture_boundaries.py  test_cli.py  test_core_abstractions.py  test_final_review_llm.py  test_global_repair_loop.py  test_intake_router_review_boundary.py  test_package.py  test_permission_builder.py  test_phase4_5_orchestrator.py  test_phase6_workspace_context.py  test_phase7_lightweight.py  test_phase8_tdd.py  test_phase9c.py  test_planning_queue.py  test_prior_task_summaries.py  test_review_input_materializer.py  test_review_only_schema.py  test_review_only_workflow.py  test_runtime_phase3.py  test_schemas.py  test_shape_agent.py  test_should_run_red.py  test_signoff.py  test_signoff_cli.py  test_specification_agent.py  test_verify_red.py
(+53 files in other folders)
